add nucleotid freq

--- a/viral_spectra/get_viruses_nuc_and_aa_equilibrium_freq.ipynb
+++ b/viral_spectra/get_viruses_nuc_and_aa_equilibrium_freq.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "469f9161-6b75-486f-b89c-ce3fdd1133f0",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "57a64244-f9d7-4940-8fad-fd43c0bc019f",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
        "[384 rows x 8 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "22bba308-5bde-4b49-a1b7-ff55ef034c19",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
        "         57482,  693997,  694014,   77763], dtype=int64)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "11b93e8d-7f8e-471c-ba7f-aa361b3e328e",
    "metadata": {},
    "outputs": [],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "8e2308b8-e298-49c1-96ba-42e43cb4e72e",
    "metadata": {},
    "outputs": [
@@ -414,37 +414,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_2868\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n",
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_2868\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n",
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_2868\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n",
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_2868\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n",
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_2868\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n",
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_2868\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n",
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_2868\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n",
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_2868\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n",
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_2868\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n",
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_2868\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n",
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_2868\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n",
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_2868\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n",
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_2868\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n",
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_2868\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n",
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_2868\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n",
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_2868\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n"
      ]
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "81d6e0e6-9e65-406e-999a-77b632a83106",
    "metadata": {},
    "outputs": [],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "04c43a95-f215-4376-9e38-742f152583c1",
    "metadata": {},
    "outputs": [
@@ -589,7 +589,7 @@
        "[128 rows x 3 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "4d7c478b-4863-46da-a5f5-54d9cc1bf8cc",
    "metadata": {},
    "outputs": [],
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "aba39e53-9758-4e5d-af40-4786f99501f1",
    "metadata": {},
    "outputs": [
@@ -642,7 +642,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "8e27cbb9-7a1d-47fb-bae7-ddae8b830c2b",
    "metadata": {},
    "outputs": [],
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "d5d31cd8-d49d-41d6-9653-4055706dd379",
    "metadata": {},
    "outputs": [],
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "d748fdf9-ab51-49c0-8296-d7b3d0bc3ef0",
    "metadata": {},
    "outputs": [
@@ -1605,7 +1605,7 @@
        "[32 rows x 21 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1644,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "839e4d73-d8e3-4d60-bccf-508c2dc6fb6c",
    "metadata": {},
    "outputs": [],
@@ -1654,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "53fe0416-20e7-4e10-b92b-a9e863190a07",
    "metadata": {},
    "outputs": [
@@ -1773,7 +1773,7 @@
        "[64 rows x 3 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1784,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "d834950f-c8f1-4827-ba15-97022b867e2e",
    "metadata": {},
    "outputs": [],
@@ -1798,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "162ca6aa-8600-4020-bf62-82c64076092b",
    "metadata": {},
    "outputs": [],
@@ -1808,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "aabf647b-fc98-4eba-86b7-f619213ae178",
    "metadata": {},
    "outputs": [],
@@ -1818,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "id": "a3117673-c359-4fa7-930d-1f888266d21a",
    "metadata": {},
    "outputs": [
@@ -1909,7 +1909,7 @@
        "[1 rows x 21 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1938,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "6ddc670d-f254-4858-a6cd-a4d36a9382ed",
    "metadata": {},
    "outputs": [],
@@ -1948,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "9110880e-dcf2-456e-ba17-083c88f30778",
    "metadata": {},
    "outputs": [],
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "18deb1ce-f4b4-4397-92ac-f045564c249b",
    "metadata": {},
    "outputs": [
@@ -2318,7 +2318,7 @@
        "167  0.044096  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2329,7 +2329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "fd6111a8-efa6-4fd6-a3c8-b0a1bffb6ef1",
    "metadata": {},
    "outputs": [
@@ -2337,9 +2337,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_9624\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n",
-      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_9624\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "C:\\Users\\777\\AppData\\Local\\Temp\\ipykernel_12324\\3682500494.py:30: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  eq_prob = get_equilibrium_probabilities(M).astype(float)\n"
      ]
     }
@@ -2355,7 +2355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "4717fd09-d7f3-4af2-bdcf-f341e1128478",
    "metadata": {},
    "outputs": [],
@@ -2365,7 +2365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "0532aa89-a2d6-4ba5-8c51-50024251c61a",
    "metadata": {},
    "outputs": [
@@ -2460,13 +2460,23 @@
        "7    T  0.672101   22C"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_nucl_eq_sars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "3085c3c3-d8c1-4b14-aacb-607c1aee7048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_nucl_eq_sars.to_csv('./data/nucl_eq_freq_sars_cov2.csv', index=False)"
    ]
   },
   {
