--- a/sars-cov-2_aa_subst/simulation.ipynb
+++ b/sars-cov-2_aa_subst/simulation.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e2f5b111",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "from Bio.SeqIO import parse"
    ]
   },
   {
@@ -46,6 +47,90 @@
     "# read cds of full proteome\n",
     "# caclulate transition matrix from spectrum\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "327bc38f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3C-like proteinase [polyprotein=ORF1ab polyprotein] CAA 306\n",
+      "nsp6 [polyprotein=ORF1ab polyprotein] CAG 290\n",
+      "nsp7 [polyprotein=ORF1ab polyprotein] CAA 83\n",
+      "nsp8 [polyprotein=ORF1ab polyprotein] CAG 198\n",
+      "nsp9 [polyprotein=ORF1ab polyprotein] CAA 113\n",
+      "nsp10 [polyprotein=ORF1ab polyprotein] CAG 139\n",
+      "RNA-dependent RNA polymerase [polyprotein=ORF1ab polyprotein] CAG 932\n",
+      "nsp11 [polyprotein=ORF1a polyprotein] GTG 13\n",
+      "helicase [polyprotein=ORF1ab polyprotein] CAA 601\n",
+      "3'-to-5' exonuclease [polyprotein=ORF1ab polyprotein] CAG 527\n",
+      "endoRNAse [polyprotein=ORF1ab polyprotein] CAA 346\n",
+      "2'-O-ribose methyltransferase [polyprotein=ORF1ab polyprotein] AAC 298\n",
+      "surface glycoprotein TAA 1274\n",
+      "ORF3a protein TAA 276\n",
+      "envelope protein TAA 76\n",
+      "membrane glycoprotein TAA 223\n",
+      " pass NC_045512.2:266-13468,13468-21555 ORF1ab polyprotein [organism=Severe acute respiratory syndrome coronavirus 2] [isolate=Wuhan-Hu-1]\n",
+      " pass NC_045512.2:266-13483 ORF1a polyprotein [organism=Severe acute respiratory syndrome coronavirus 2] [isolate=Wuhan-Hu-1]\n",
+      "leader protein [polyprotein=ORF1ab polyprotein] GGG 180\n",
+      "nsp3 [polyprotein=ORF1ab polyprotein] GGT 1945\n",
+      "ORF6 protein TAA 62\n",
+      "ORF7a protein TGA 122\n",
+      "ORF7b TAA 44\n",
+      "ORF8 protein TAA 122\n",
+      "nucleocapsid phosphoprotein TAA 420\n",
+      "ORF10 protein TAG 39\n",
+      "nsp2 [polyprotein=ORF1ab polyprotein] GGT 638\n",
+      "nsp4 [polyprotein=ORF1ab polyprotein] CAG 500\n"
+     ]
+    }
+   ],
+   "source": [
+    "for rec in parse('./data/refseq_data/cds.fna', 'fasta'):\n",
+    "    if ' ORF1ab polyprotein ' in rec.description or ' ORF1a polyprotein ' in rec.description:\n",
+    "        print(' pass', rec.description)\n",
+    "    else:\n",
+    "        # print(rec.description, len(rec), len(rec) % 3)\n",
+    "        seq = str(rec.seq)\n",
+    "        codons = [seq[i:i+3] for i in range(0, len(rec), 3)]\n",
+    "        assert seq == ''.join(codons)\n",
+    "        gene = ' '.join(rec.description.split()[1:]).split(' [organism=')[0]\n",
+    "\n",
+    "        print(gene, codons[-1], len(codons))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a5b3c821",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'nsp4 [polyprotein=ORF1ab polyprotein]'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' '.join(rec.description.split()[1:]).split(' [organism=')[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be6cfe77",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -207,7 +292,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv_bio",
+   "display_name": "env_bio",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
