--- a/viral_spectra/derive_loosers_gainers.ipynb
+++ b/viral_spectra/derive_loosers_gainers.ipynb
@@ -1933,7 +1933,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv_bio",
+   "display_name": "env_bio",
    "language": "python",
    "name": "python3"
   },
@@ -1947,7 +1947,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
