simultaion set up

--- a/sars-cov-2_aa_subst/change_of_aa_freqs.ipynb
+++ b/sars-cov-2_aa_subst/change_of_aa_freqs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "id": "42b21764",
    "metadata": {},
    "outputs": [],
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "9eb2cec9",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
        " './data/genotypes2025/gisaid_hcov-19_2025_05_29_10(1).tsv']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "e078a930",
    "metadata": {},
    "outputs": [
@@ -795,7 +795,7 @@
        "EPI_ISL_19674372  (NSP5_P132H,Spike_H69del,NSP3_T1465I,NSP3_G489...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "0cc8391e",
    "metadata": {},
    "outputs": [
@@ -820,7 +820,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "3b41e72f",
    "metadata": {},
    "outputs": [
@@ -848,7 +848,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "6c7c1a55",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "fcae4d8f",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "ab33c9d0",
    "metadata": {},
    "outputs": [
@@ -930,7 +930,7 @@
        "Name: Collection date, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "b96061e9",
    "metadata": {},
    "outputs": [
@@ -951,7 +951,7 @@
        "(59361, 15)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "e96117a2",
    "metadata": {},
    "outputs": [
@@ -1008,7 +1008,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "0d8e4df2",
    "metadata": {},
    "outputs": [],
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "53554634",
    "metadata": {},
    "outputs": [
@@ -1432,7 +1432,7 @@
        "[59361 rows x 23 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "d0023311",
    "metadata": {},
    "outputs": [
@@ -1477,7 +1477,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "dfd9d559",
    "metadata": {},
    "outputs": [
@@ -1880,7 +1880,7 @@
        "[59361 rows x 20 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1892,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "id": "f03694ce",
    "metadata": {},
    "outputs": [
@@ -1902,7 +1902,7 @@
        "9744"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "id": "01962fd7",
    "metadata": {},
    "outputs": [
@@ -2055,7 +2055,7 @@
        "Trp     5.624160"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2065,6 +2065,16 @@
     "aa_eq_freqs_20A.columns = ['eq_freq']\n",
     "aa_eq_freqs_20A['eq_freq'] = aa_eq_freqs_20A['eq_freq'] * sum(aa_freqs_total_dct_ref.values())\n",
     "aa_eq_freqs_20A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1ac012ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa_content_full.mean(0).rename('gisaid_2025').rename(index=amino_acid_codes).to_csv('./data/mean_aa_content_2025.csv', header=False)"
    ]
   },
   {
