--- a/sars-cov-2_aa_subst/process.ipynb
+++ b/sars-cov-2_aa_subst/process.ipynb
@@ -7970,7 +7970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
@@ -7980,63 +7980,72 @@
       "clade 21J\n",
       "df - delta fitness\n",
       "\n",
-      "df < -0.0  --> r2=0.51 (150/150)\n",
-      "df >  0.0  --> r2=0.49 (150/150)\n",
+      "df < -0.0    --> r2=0.54 (150/150)\n",
+      "df >  0.0    --> r2=0.49 (150/150)\n",
       "\n",
-      "df < -0.25  --> r2=0.55 (150/150)\n",
-      "-0.25<df<0.25  --> r2=0.38 (149/150)\n",
-      "df >  0.25  --> r2=0.48 (148/150)\n",
+      "df < -0.25    --> r2=0.58 (150/150)\n",
+      "-0.25<df<0.25 --> r2=0.40 (149/150)\n",
+      "df >  0.25    --> r2=0.48 (148/150)\n",
       "\n",
-      "df < -0.5  --> r2=0.59 (150/150)\n",
-      "-0.5<df<0.5  --> r2=0.45 (149/150)\n",
-      "df >  0.5  --> r2=0.46 (147/150)\n",
+      "df < -0.5    --> r2=0.61 (150/150)\n",
+      "-0.5<df<0.5 --> r2=0.47 (149/150)\n",
+      "df >  0.5    --> r2=0.45 (147/150)\n",
       "\n",
-      "df < -0.75  --> r2=0.61 (150/150)\n",
-      "-0.75<df<0.75  --> r2=0.50 (150/150)\n",
-      "df >  0.75  --> r2=0.41 (143/150)\n",
+      "df < -0.75    --> r2=0.63 (150/150)\n",
+      "-0.75<df<0.75 --> r2=0.51 (150/150)\n",
+      "df >  0.75    --> r2=0.41 (143/150)\n",
       "\n",
-      "df < -1.0  --> r2=0.63 (137/150)\n",
-      "-1.0<df<1.0  --> r2=0.53 (150/150)\n",
-      "df >  1.0  --> r2=0.27 (135/150)\n",
+      "df < -1.0    --> r2=0.65 (137/150)\n",
+      "-1.0<df<1.0 --> r2=0.53 (150/150)\n",
+      "df >  1.0    --> r2=0.29 (135/150)\n",
       "\n",
-      "df < -1.25  --> r2=0.61 (117/150)\n",
-      "-1.25<df<1.25  --> r2=0.55 (150/150)\n",
-      "df >  1.25  --> r2=-0.07 (117/150)\n",
+      "df < -1.25    --> r2=0.63 (117/150)\n",
+      "-1.25<df<1.25 --> r2=0.55 (150/150)\n",
+      "df >  1.25    --> r2=-0.03 (117/150)\n",
       "\n",
-      "df < -1.5  --> r2=0.58 (109/150)\n",
-      "-1.5<df<1.5  --> r2=0.55 (150/150)\n",
-      "df >  1.5  --> r2=-0.22 (96/150)\n",
+      "df < -1.5    --> r2=0.60 (109/150)\n",
+      "-1.5<df<1.5 --> r2=0.55 (150/150)\n",
+      "df >  1.5    --> r2=-0.18 (96/150)\n",
       "\n",
-      "df < -1.75  --> r2=0.56 (90/150)\n",
-      "-1.75<df<1.75  --> r2=0.55 (150/150)\n",
-      "df >  1.75  --> r2=-0.35 (76/150)\n",
+      "df < -1.75    --> r2=0.58 (90/150)\n",
+      "-1.75<df<1.75 --> r2=0.55 (150/150)\n",
+      "df >  1.75    --> r2=-0.30 (76/150)\n",
       "\n",
-      "df < -2.0  --> r2=0.55 (90/150)\n",
-      "-2.0<df<2.0  --> r2=0.55 (150/150)\n",
-      "df >  2.0  --> r2=-0.39 (63/150)\n",
+      "df < -2.0    --> r2=0.57 (90/150)\n",
+      "-2.0<df<2.0 --> r2=0.55 (150/150)\n",
+      "df >  2.0    --> r2=-0.34 (63/150)\n",
       "\n"
      ]
     }
    ],
    "source": [
     "clade = '21J'\n",
+    "\n",
+    "spectrum_cur = clades_spectra[clades_spectra['clade'] == clade].copy()\n",
+    "spectrum_cur['rate'] /= spectrum_cur['rate'].sum()\n",
+    "\n",
+    "spectrum_dct = spectrum_cur.set_index('Mut').rate.to_dict()\n",
+    "df_changes = collect_possible_changes(1, spectrum_dct)\n",
+    "exp_aa_subst_cur = df_changes[(df_changes.aa1 != '*')&(df_changes.aa2 != '*')]\\\n",
+    "    .groupby(['aa1', 'aa2'])['rate'].sum().reset_index()\n",
+    "\n",
     "print(f'clade {clade}\\ndf - delta fitness\\n')\n",
     "for cutoff in np.linspace(0, 2, 9):\n",
     "    _ = aamut_fitness_ns.query(f'clade == \"{clade}\" & actual_count > 0 & delta_fitness < {-cutoff}').rename(columns={'actual_count': 'count'})\n",
-    "    aas = prepare_aa_subst(_, exp_aa_subst, aa_freqs_total_dct)\n",
+    "    aas = prepare_aa_subst(_, exp_aa_subst_cur, aa_freqs_total_dct)\n",
     "    x = calc_metrics(aas)['r2']\n",
-    "    print(f\"df < {-cutoff}  --> r2={x:.2f} ({aas.nobs.ne(0).sum()}/150)\")\n",
+    "    print(f\"df < {-cutoff}    --> r2={x:.2f} ({aas.nobs.ne(0).sum()}/150)\")\n",
     "    \n",
     "    if cutoff != 0:\n",
     "        _ = aamut_fitness_ns.query(f'clade == \"{clade}\" & actual_count > 0 & {-cutoff} < delta_fitness < {cutoff}').rename(columns={'actual_count': 'count'})\n",
-    "        aas = prepare_aa_subst(_, exp_aa_subst, aa_freqs_total_dct)\n",
+    "        aas = prepare_aa_subst(_, exp_aa_subst_cur, aa_freqs_total_dct)\n",
     "        x = calc_metrics(aas)['r2']\n",
-    "        print(f\"{-cutoff}<df<{cutoff}  --> r2={x:.2f} ({aas.nobs.ne(0).sum()}/150)\")\n",
+    "        print(f\"{-cutoff}<df<{cutoff} --> r2={x:.2f} ({aas.nobs.ne(0).sum()}/150)\")\n",
     "\n",
     "    _ = aamut_fitness_ns.query(f'clade == \"{clade}\" & actual_count > 0 & delta_fitness > {cutoff}').rename(columns={'actual_count': 'count'})\n",
-    "    aas = prepare_aa_subst(_, exp_aa_subst, aa_freqs_total_dct)\n",
+    "    aas = prepare_aa_subst(_, exp_aa_subst_cur, aa_freqs_total_dct)\n",
     "    x = calc_metrics(aas)['r2']\n",
-    "    print(f\"df >  {cutoff}  --> r2={x:.2f} ({aas.nobs.ne(0).sum()}/150)\")\n",
+    "    print(f\"df >  {cutoff}    --> r2={x:.2f} ({aas.nobs.ne(0).sum()}/150)\")\n",
     "    print()"
    ]
   },
