--- a/viral_spectra/get_cossim_between_nemu_Bloom.ipynb
+++ b/viral_spectra/get_cossim_between_nemu_Bloom.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "5ff382b5-d91b-4bee-9c71-95364561daf2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kpotoh/.pyenv/.venv_bio/lib64/python3.13/site-packages/fuzzywuzzy/fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
+      "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -15,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a6c70815-0faa-49fa-b6c0-d601b905ee00",
    "metadata": {},
    "outputs": [],
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "99283066-2521-4ca4-ac5a-d5a617c81bca",
    "metadata": {},
    "outputs": [],
@@ -37,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8abd32d2-b5d8-49bb-bcf7-ab165fc6631d",
    "metadata": {},
    "outputs": [],
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7dfaeaad-9d2e-44b9-9ffb-5bf383cba37c",
    "metadata": {},
    "outputs": [],
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fc48d978-bcce-40a1-84d0-3dbc853644d3",
    "metadata": {},
    "outputs": [],
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "a5ad912f-0bf2-4ac7-baa9-5165c5f39c7f",
    "metadata": {},
    "outputs": [
@@ -226,7 +235,7 @@
        "4  Bloom_etal  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "891c5d61-e1ab-41b3-b856-c02e6dc37bec",
    "metadata": {},
    "outputs": [],
@@ -248,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "c4259f72-7548-4a29-b2d8-1587b1778aff",
    "metadata": {},
    "outputs": [],
@@ -259,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "63815cd4-520d-45cf-a436-3771c9623228",
    "metadata": {},
    "outputs": [],
@@ -271,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "a7bcd30b-ec5b-4177-a328-059fcef0c002",
    "metadata": {},
    "outputs": [
@@ -315,6 +324,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0.109127</td>\n",
+       "      <td>0.117342</td>\n",
+       "      <td>0.073464</td>\n",
+       "      <td>0.060217</td>\n",
+       "      <td>0.011690</td>\n",
+       "      <td>0.149450</td>\n",
+       "      <td>0.196651</td>\n",
+       "      <td>0.026968</td>\n",
+       "      <td>0.020779</td>\n",
+       "      <td>0.036932</td>\n",
+       "      <td>0.132424</td>\n",
+       "      <td>0.064957</td>\n",
+       "      <td>Hepatitis B virus</td>\n",
+       "      <td>nemu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>0.034784</td>\n",
        "      <td>0.086621</td>\n",
        "      <td>0.027108</td>\n",
@@ -331,7 +357,7 @@
        "      <td>nemu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>0.012922</td>\n",
        "      <td>0.127692</td>\n",
        "      <td>0.009847</td>\n",
@@ -348,7 +374,7 @@
        "      <td>nemu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>0.008852</td>\n",
        "      <td>0.143715</td>\n",
        "      <td>0.014274</td>\n",
@@ -365,7 +391,7 @@
        "      <td>nemu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>0.009244</td>\n",
        "      <td>0.183506</td>\n",
        "      <td>0.025201</td>\n",
@@ -381,51 +407,34 @@
        "      <td>Norwalk virus</td>\n",
        "      <td>nemu</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.012652</td>\n",
-       "      <td>0.223645</td>\n",
-       "      <td>0.018232</td>\n",
-       "      <td>0.014670</td>\n",
-       "      <td>0.002589</td>\n",
-       "      <td>0.201530</td>\n",
-       "      <td>0.137092</td>\n",
-       "      <td>0.014227</td>\n",
-       "      <td>0.017123</td>\n",
-       "      <td>0.020364</td>\n",
-       "      <td>0.319673</td>\n",
-       "      <td>0.018203</td>\n",
-       "      <td>Foot-and-mouth disease virus</td>\n",
-       "      <td>nemu</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "        A>C       A>G       A>T       C>A       C>G       C>T       G>A  \\\n",
-       "0  0.034784  0.086621  0.027108  0.044784  0.006846  0.339187  0.234664   \n",
-       "1  0.012922  0.127692  0.009847  0.022595  0.001792  0.379747  0.123494   \n",
-       "2  0.008852  0.143715  0.014274  0.079285  0.000000  0.198377  0.334457   \n",
-       "3  0.009244  0.183506  0.025201  0.014157  0.002805  0.243095  0.227613   \n",
-       "4  0.012652  0.223645  0.018232  0.014670  0.002589  0.201530  0.137092   \n",
+       "0  0.109127  0.117342  0.073464  0.060217  0.011690  0.149450  0.196651   \n",
+       "1  0.034784  0.086621  0.027108  0.044784  0.006846  0.339187  0.234664   \n",
+       "2  0.012922  0.127692  0.009847  0.022595  0.001792  0.379747  0.123494   \n",
+       "3  0.008852  0.143715  0.014274  0.079285  0.000000  0.198377  0.334457   \n",
+       "4  0.009244  0.183506  0.025201  0.014157  0.002805  0.243095  0.227613   \n",
        "\n",
        "        G>C       G>T       T>A       T>C       T>G  \\\n",
-       "0  0.000000  0.102792  0.009995  0.095861  0.017356   \n",
-       "1  0.003866  0.031890  0.022814  0.249177  0.014165   \n",
-       "2  0.000000  0.058034  0.031512  0.126587  0.004907   \n",
-       "3  0.012168  0.021287  0.031341  0.224274  0.005309   \n",
-       "4  0.014227  0.017123  0.020364  0.319673  0.018203   \n",
+       "0  0.026968  0.020779  0.036932  0.132424  0.064957   \n",
+       "1  0.000000  0.102792  0.009995  0.095861  0.017356   \n",
+       "2  0.003866  0.031890  0.022814  0.249177  0.014165   \n",
+       "3  0.000000  0.058034  0.031512  0.126587  0.004907   \n",
+       "4  0.012168  0.021287  0.031341  0.224274  0.005309   \n",
        "\n",
        "                           taxname    df  \n",
-       "0  Rice black streaked dwarf virus  nemu  \n",
-       "1                  West Nile virus  nemu  \n",
-       "2                Influenza A virus  nemu  \n",
-       "3                    Norwalk virus  nemu  \n",
-       "4     Foot-and-mouth disease virus  nemu  "
+       "0                Hepatitis B virus  nemu  \n",
+       "1  Rice black streaked dwarf virus  nemu  \n",
+       "2                  West Nile virus  nemu  \n",
+       "3                Influenza A virus  nemu  \n",
+       "4                    Norwalk virus  nemu  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "11086dc7-f0e5-4855-a8b5-b3ded8eb80c2",
    "metadata": {},
    "outputs": [],
@@ -489,18 +498,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "id": "cab15d37-cdc3-4599-a2b4-25fafeffc67f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results_df = results_df.drop(index=[7, 9, 10, 12]).reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "09f8f0a4-8938-4011-9267-a1ee156b2d5f",
    "metadata": {},
    "outputs": [
     {
@@ -611,12 +610,14 @@
        "8      Enterovirus D    Enterovirus D68                93           0.998397"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "results_df = results_df.drop(index=[7, 9, 10, 12]).reset_index(drop=True)\n",
+    "results_df.to_csv('./data/nemu_results_qc.csv', index=False)\n",
     "results_df"
    ]
   },
@@ -631,7 +632,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv_bio",
    "language": "python",
    "name": "python3"
   },
@@ -645,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.13.3"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
