--- a/sars-cov-2_aa_subst/process.ipynb
+++ b/sars-cov-2_aa_subst/process.ipynb
@@ -10597,6 +10597,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO add here the estimation of distanse to the equilibrium"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 115,
    "metadata": {},
    "outputs": [
