fixed: nuc_matrix func now return P matrix

--- a/viral_spectra/nuc_eq_example.ipynb
+++ b/viral_spectra/nuc_eq_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "ea744b08",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "50a42407",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
        "HAV                          Hepatovirus A  nemu  12092  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "0e7f1d2b",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "1.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "id": "bb565100",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
        " 'A>C': 0.035}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "id": "2f24a228",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
        "       [ 0.035,  0.23 ,  0.035, -0.22 ]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,17 +324,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "06c19a42",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACGT\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "array([0.20555556, 0.29444444, 0.29444444, 0.20555556])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "bc43838e",
    "metadata": {},
    "outputs": [
@@ -365,7 +372,7 @@
        "array([0.29444444, 0.20555556, 0.20555556, 0.29444444])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "id": "c67b59b2",
    "metadata": {},
    "outputs": [
@@ -419,7 +426,7 @@
        "array([0.16219871, 0.07212197, 0.02759827, 0.73808105])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,20 +440,108 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48736b3a",
+   "cell_type": "markdown",
+   "id": "731748db",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Correct functions"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c94fa8c7",
+   "execution_count": 38,
+   "id": "628a7d16",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "alphabet = 'ACGT'\n",
+    "\n",
+    "def nuc_spectrum_to_matrix(spec):\n",
+    "    '''\n",
+    "    convert dictionary of mutation counts to mutation matrix\n",
+    "    '''\n",
+    "    M = np.zeros((4,4))\n",
+    "    for i1,n1 in enumerate(alphabet):\n",
+    "        for i2,n2 in enumerate(alphabet):\n",
+    "            if n1!=n2:\n",
+    "                M[i1,i2] = spec[f\"{n1}>{n2}\"]\n",
+    "    # normalize off-diagonal rates (just for standardization, doesn't affect the results)\n",
+    "    M /= M.sum()    \n",
+    "    return M\n",
+    "\n",
+    "def get_equilibrium_probabilities(Pmatrix: np.ndarray):\n",
+    "    Q = Pmatrix.copy()\n",
+    "    Q = Q - np.diag(np.sum(Q, axis=1))\n",
+    "\n",
+    "    values, vectors = np.linalg.eig(Q.T)\n",
+    "    pi = vectors[:, np.isclose(values, 0)].real.flatten()\n",
+    "    pi = pi / pi.sum()\n",
+    "    return pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "dfefe1f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACGT\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.16219871, 0.07212197, 0.02759827, 0.73808105])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# CoV example\n",
+    "Mcov = nuc_spectrum_to_matrix(cov_spectrum)\n",
+    "nuc_eq_cov = get_equilibrium_probabilities(Mcov)\n",
+    "print(alphabet)\n",
+    "nuc_eq_cov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "c94fa8c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACGT\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.29444444, 0.20555556, 0.20555556, 0.29444444])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# AS example\n",
+    "M = nuc_spectrum_to_matrix(random_spectrum12)\n",
+    "nuc_eq_as = get_equilibrium_probabilities(M)\n",
+    "print(alphabet)\n",
+    "nuc_eq_as"
+   ]
   },
   {
    "cell_type": "code",
